[UPDATE] Create a clean project with gradle
Gradle allows to get every dependencie for this project,
so we don't need to search for every jar in the internet

With the gradlew command the project can be build on every machine with
java

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,11 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+#IntelliJ
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
